[gd_scene load_steps=23 format=2]

[ext_resource path="res://Interface/Consumers/ScoreBoard.gd" type="Script" id=1]
[ext_resource path="res://Interface/resources/UI/score/5.png" type="Texture" id=2]
[ext_resource path="res://Interface/resources/UI/score/10.png" type="Texture" id=3]
[ext_resource path="res://Interface/resources/UI/score/6.png" type="Texture" id=4]
[ext_resource path="res://Interface/resources/UI/score/8.png" type="Texture" id=5]
[ext_resource path="res://Interface/resources/UI/score/3.png" type="Texture" id=6]
[ext_resource path="res://Interface/resources/UI/score/7.png" type="Texture" id=7]
[ext_resource path="res://Interface/resources/UI/score/9.png" type="Texture" id=8]
[ext_resource path="res://Interface/resources/UI/score/1.png" type="Texture" id=9]
[ext_resource path="res://Interface/resources/UI/score/4.png" type="Texture" id=10]
[ext_resource path="res://Interface/resources/UI/score/2.png" type="Texture" id=11]
[ext_resource path="res://Interface/resources/Fonts/ARIAL.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://Interface/resources/UI/Stars/0s.png" type="Texture" id=13]
[ext_resource path="res://Interface/resources/UI/Stars/2s.png" type="Texture" id=14]
[ext_resource path="res://Interface/resources/UI/Stars/1s.png" type="Texture" id=15]
[ext_resource path="res://Interface/resources/UI/Stars/3s.png" type="Texture" id=16]
[ext_resource path="res://Interface/resources/UI/dreamstime_62725226 [Convertido]2.png" type="Texture" id=17]
[ext_resource path="res://Interface/resources/black666.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 12 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Area2D" type="Area2D"]
z_index = -1
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
visible = false
margin_left = 740.0
margin_top = 81.0
margin_right = 780.0
margin_bottom = 95.0
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="."]
margin_left = 819.0
margin_top = 77.0
margin_right = 859.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnsLeft" type="Label" parent="."]
visible = false
margin_left = 740.0
margin_top = 103.0
margin_right = 804.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, -27 )
text = "Turns left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnsLeftValue" type="Label" parent="."]
margin_left = 827.0
margin_top = 105.0
margin_right = 867.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objectives" type="Label" parent="."]
visible = false
margin_left = 744.0
margin_top = 157.0
margin_right = 806.0
margin_bottom = 171.0
text = "Objectives"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectivesValue" type="Label" parent="."]
margin_left = 744.0
margin_top = 179.0
margin_right = 784.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon1" type="AnimatedSprite" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1572, 596 )
z_index = -2
frames = SubResource( 1 )

[node name="0s" type="Sprite" parent="."]
visible = false
position = Vector2( 1176, 558 )
texture = ExtResource( 13 )

[node name="1s" type="Sprite" parent="."]
visible = false
position = Vector2( 1176, 558 )
texture = ExtResource( 15 )

[node name="2s" type="Sprite" parent="."]
visible = false
position = Vector2( 1176, 558 )
texture = ExtResource( 14 )

[node name="3s" type="Sprite" parent="."]
visible = false
position = Vector2( 1176, 558 )
texture = ExtResource( 16 )

[node name="socre1" type="Sprite" parent="."]
visible = false
position = Vector2( 820, 611 )
texture = ExtResource( 17 )

[node name="socre2" type="Sprite" parent="."]
visible = false
position = Vector2( 919, 639 )
texture = ExtResource( 17 )

[node name="socre3" type="Sprite" parent="."]
visible = false
position = Vector2( 1076, 677 )
texture = ExtResource( 17 )

[node name="Black66" type="Sprite" parent="."]
visible = false
position = Vector2( 1507, 898 )
scale = Vector2( 0.99, 0.46 )
texture = ExtResource( 18 )
offset = Vector2( -32.8282, 21.7391 )

[node name="Black67" type="Sprite" parent="."]
visible = false
position = Vector2( 1606, 898 )
scale = Vector2( 0.99, 0.46 )
texture = ExtResource( 18 )
offset = Vector2( -32.8282, 21.7391 )

[node name="Black68" type="Sprite" parent="."]
visible = false
position = Vector2( 1703, 898 )
scale = Vector2( 0.971797, 0.459799 )
texture = ExtResource( 18 )
offset = Vector2( -32.8282, 21.7391 )
